<resources>
    <string name="app_name">imobox</string>
    <string name="facebook_app_id">129310704392597</string>
    <string name="fb_login_protocol_scheme">fb129310704392597</string>
    <string name="client">Cliente</string>
    <string name="realtor">Corretor</string>
    <string name="owner">Proprietário</string>
    <string name="add">Criar/Prosseguir</string>
    <string name="known">Conhecimento</string>

    <string name="title_propertie"></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="why_do_you_want_to_rent_buy_moment_of_life">Why do you want to rent / buy? - Moment of life</string>
    <string-array name="array_why_do_you_want_to_rent_buy_moment_of_life">
        <item>Vou me casar</item>
        <item>Vou morar sozinho</item>
        <item>Filhos se mudando, preciso de um local menor</item>
        <item>Família crescendo</item>
        <item>Quero morar com amigos</item>
        <item>Preciso morar perto do trabalho</item>
        <item>Quero abrir um negócio</item>
        <item>Outro</item>
    </string-array>
    <string name="what_minimum_and_maximum_amount_do_you_want_to_spend">What minimum and maximum amount do you want to spend?</string>
    <string name="rent">Alugar</string>
    <string name="purchase">Comprar</string>
    <string name="what_do_you_prefer">O que você prefere?</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string-array name="array_what_are_you_looking_for">
        <item>Residencial</item>
        <item>Apartamento</item>
        <item>Casa</item>
        <item>Chácara</item>
        <item>Casa de condomínio</item>
        <item>Flat</item>
        <item>Sobrado</item>
        <item>Cobertura</item>
        <item>Kitnet</item>
        <item>Comercial</item>
        <item>Consultório</item>
        <item>Edifício residencial</item>
        <item>Sala comercial</item>
        <item>Loja</item>
        <item>Galpão</item>
    </string-array>

    <string name="preferencia">Prefere trabalhar com qual faixa etária?</string>
    <string-array name="array_preferencia">
        <item>De 18 até 28 anos</item>
        <item>De 29 até 39 anos</item>
        <item>De 40 até 49 anos</item>
        <item>De 50 até 59 anos</item>
        <item>Acima de 60 anos</item>
    </string-array>

    <string name="disponibilidade">Disponibilidade</string>
    <string-array name="array_disponibilidade">
        <item>Manhã</item>
        <item>Tarde</item>
        <item>Noite</item>
    </string-array>

    <string name="regioes">Quais regiões você gostaria de atender?</string>
    <string-array name="array_regioes">
        <item>Zona Leste</item>
        <item>Zona Norte</item>
        <item>Centro</item>
        <item>Zona Oeste</item>
        <item>Zona Sul</item>
    </string-array>

    <string name="tipo_imovel">Tipos de imóveis que prefere trabalhar</string>
    <string-array name="array_tipo_imovel">
        <item>Residencial</item>
        <item>Apartamento</item>
        <item>Casa</item>
        <item>Chácara</item>
        <item>Casa de condomínio</item>
        <item>Flat</item>
        <item>Sobrado</item>
        <item>Cobertura</item>
        <item>Kitnet</item>
        <item>Comercial</item>
        <item>Consultório</item>
        <item>Edifício residencial</item>
        <item>Sala comercial</item>
        <item>Loja</item>
        <item>Galpão</item>
    </string-array>

    <string name="intro_1_title">Cliente</string>
    <string name="intro_2_title">Corretor</string>
    <string name="intro_3_title">Proprietário</string>

    <string name="intro_1_desc">Encontre imóveis que realmente combinam com você!</string>
    <string name="intro_2_desc">Tenha um vasto catálogo de imóveis disponíveis</string>
    <string name="intro_3_desc">Cadastre seus imóveis e tenha os melhores corretores para lhe auxiliar na venda ou locação</string>
</resources>
