<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.imobox.com.imobox.RegisterRealtorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:foregroundGravity="center"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="creci"
            android:id="@+id/creci"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Você possui carro?"/>

        
        <Spinner
            android:id="@+id/preferencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_preferencia"
            android:prompt="@string/preferencia" />

        <Spinner
            android:id="@+id/disponibilidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_disponibilidade"
            android:prompt="@string/disponibilidade" />

        <Spinner
            android:id="@+id/regioes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_regioes"
            android:prompt="@string/regioes" />

        <Spinner
            android:id="@+id/tipo_imovel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_tipo_imovel"
            android:prompt="@string/tipo_imovel" />

        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/btn_add" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
