<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:foregroundGravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_email"
                android:hint="email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_perfil"
                android:hint="perfil"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                <RadioButton android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_about"
                android:hint="about"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_birthday"
                android:hint="birthday"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_school_records"
                android:hint="school records"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_work_records"
                android:hint="work records"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_location"
                android:hint="location"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_do_you_prefer"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton android:id="@+id/purchase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase"/>
                <RadioButton android:id="@+id/rent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rent"/>
            </RadioGroup>

            <Spinner
            android:id="@+id/sppiner_what_are_you_looking_for"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_what_are_you_looking_for"
            android:prompt="@string/what_are_you_looking_for" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_minimum_and_maximum_amount_do_you_want_to_spend"/>

            <SeekBar
                android:id="@+id/progressbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:max="40000"
                android:progress="0"
                android:progressDrawable="@drawable/progressbar"
                android:secondaryProgress="0" />

            <Spinner
                android:id="@+id/sppiner_why_do_you_want_to_rent_buy_moment_of_life"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/array_why_do_you_want_to_rent_buy_moment_of_life"
                android:prompt="@string/why_do_you_want_to_rent_buy_moment_of_life" />

            <Button
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/btn_add" />
        </LinearLayout>
    </TableLayout>
</ScrollView>